--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "react-redux": "^8.1.2",
+    "typescript": "5.2.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "@types/uuid": "^9.0.3",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "sass": "^1.66.1"
   }
 }
